# ex_final_fusion

./: .gitignore  README.md  mix.exs
examples/: basic.livemd
lib/: ex_final_fusion.ex
lib/ex_final_fusion/: embeddings.ex  native.ex
native/exfinalfusion/: Cargo.toml
native/exfinalfusion/src/: error.rs  exfinalfusion.rs  lib.rs  main.rs
native/exfinalfusion_native/: Cargo.toml  README.md
native/exfinalfusion_native/src/: error.rs  exfinalfusion.rs  lib.rs
test/: ex_final_fusion_test.exs
