[package]
name = "exfinalfusion_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "exfinalfusion_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
finalfusion = "0.18"
thiserror = "1.0"
ndarray = { version = "0.15.6", features = ["serde-1"] }
serde_rustler = { path = "../../../serde_rustler/serde_rustler" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
rustler = "0.32"
